<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_all_guests">

    <fragment
        android:id="@+id/nav_all_guests"
        android:name="com.example.appconvidados.view.AllGuestFragment"
        android:label="@string/todas_as_receitas"
        tools:layout="@layout/fragment_all_guests" />

    <fragment
        android:id="@+id/nav_present"
        android:name="com.example.appconvidados.view.PresentFragment"
        android:label="@string/menu_curtidas"
        tools:layout="@layout/fragment_present" />

    <fragment
        android:id="@+id/nav_absent"
        android:name="com.example.appconvidados.view.AbsentFragment"
        android:label="@string/menu_faceis"
        tools:layout="@layout/fragment_absent" />
</navigation>